fixing mobile alignment

--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -107,10 +107,8 @@ footer {
 }
 
 .post-card{
-    /* display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center; */
+    margin-right: 0;
+    margin-left: 0;
     color:black;
     width:100%;
 }
